fixed issue of zoom in and out

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 	</body>
 	<script src="assets/js/vplayer.js"></script>
 	<script>
-		var playList = {'first':'Pitbull.mp4',
-						'second':'nicole.mp4',
-						'third':'Enrique.mp4'};
+		var playList = {'first':'Alan-Walker-Faded.mp4',
+						'second':'Supne.mp4',
+						'third':'ToTheSky.mp4'};
 		vPlayer.config({
 			'elementClass' : 'video-container',
 			'controls' : true,
 			'playListEnabled' : true,
 			'playList'  : playList,
-			'src' : 'Enrique.mp4',
+			'src' : 'ToTheSky.mp4',
 			'videoPlayerCss' : 'vPlayer',
 			'sourcePath' : 'assets/video/' 
 		});
